syntax = "proto3";

package model;

option go_package = "github.com/BlockchainZoo/spinechain-api-prototype/backend/schema/model";

message AccountBalance {
    int64 ID = 1;
    bytes PublicKey = 2;
    int64 Balance = 3;
    int64 UnconfirmedBalance = 4;
    int32 ForgedBalance = 5;
    int32 Height = 6;
}

message GetAccountBalancesRequest {}

message GetAccountBalancesResponse { 
    repeated AccountBalance AccountBalances = 1;
}

message GetAccountBalanceRequest {
    bytes PublicKey = 1; 
}
