syntax="proto3";

package model;

option go_package = "github.com/BlockchainZoo/spinechain-api-prototype/backend/schema/model";

message Transaction {
	int64 ID = 1;
	int64 BlockID = 2;
	uint32 Deadline = 3;
	bytes SenderPublicKey = 4;
	bytes RecipientPublicKey = 5;
	int64 AmountNQT = 6;
	int64 FeeNQT = 7;
	uint32 EcBlockHeight = 8;
	int64 EcBlockID = 9;
	bytes Version = 10;
	uint32 Timestamp = 11;
	bytes Signature = 12;
	bytes Type = 13;
	bytes Subtype = 14;
	uint32 Height = 15;
	string Hash = 16;
}

message  GetTransactionRequest{
    bytes TransactionBytes = 1;
}

message GetTransactionResponse {
    string Message = 1;
    bool IsValid = 2;
    bytes TransactionBytes = 3;
}
message GetTransactionsByAccountPublicKeyRequest {
	bytes AccountPublicKey = 1;
}

message GetTransactionsByBlockIDRequest {
	int64 BlockID = 1;
}

message GetTransactionsResponse {
	// GetTrasactions return 
	repeated Transaction Transactions = 1;
}
